# download-and-push-to-s3

./: Containerfile  README.md  download-and-push-to-s3.py  pyproject.toml
